# golf-performance-analysis

./: .gitignore  PROCESS.md  PROCESS.txt  README.md  main.py  pyproject.toml  test_clean.py
src/: data_io.py  metrics.py  preprocessing.py  statistics.py  visualization.py
tests/: test_data_io.py  test_preprocessing.py
