[tool.poetry]
name = "golf-performance-analysis"
version = "0.1.0"
description = "Analisi dati golf – trend performance personale"
authors = ["FabrizioAI <tuo@email>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/FabryAI/golf-performance-analysis"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.1"
numpy = "^1.25.0"
matplotlib = "^3.7.0"
scikit-learn = "^1.3.0"
click = "^8.1.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"